<resources>
    <string name="app">book-a-look</string>
    <string name="app_name">Studienprojekt</string>
    <string name="auswahl_kunde_salon">Wählen sie aus:</string>
    <string name="kunde">Kunde</string>
    <string name="salonbetreiber">Salonbetreiber</string>
    <string name="auswahl_kategorie">Wählen sie die Kategorie aus:</string>
    <string name="damen">Damen</string>
    <string name="herren">Herren</string>
    <string name="wellness">Wellness</string>
    <string name="buchung">Ihre Buchung suchen</string>
    <string name="friseur">Friseur</string>
    <string name="kosmetikstudios">Kosmetikstudios</string>
    <string name="maniküre">Maniküre/Pediküre</string>
    <string name="haarentfernung">Haarentfernung</string>
    <string name="sauna">Sauna</string>
    <string name="massagen">Massagen</string>
    <string name="zurück">Zurück</string>                                                               // wird dieser Button benötigt?
    <string name="wohnort_plz">Geben Sie bitte Ihren Wohnort/Ihre PLZ an: </string>                     // bisher nur Eingabe der PLZ
    <string name="suchen">Suchen</string>
    <string name="kategorie">Kategorie</string>
    <string name="profil">Profil</string>
    <string name="details">Details</string>
    <string name="termin_buchen">Termin buchen</string>
    <string name="angestellten_auswaehlen">Bitte wählen Sie den Angestellten aus:</string>
    <string name="terminkalender">Terminkalender</string>
    <string name="kontaktdaten">Kontaktdaten</string>
    <string name="vorname">Vorname: </string>
    <string name="nachname">Nachname: </string>
    <string name="email">E-Mail: </string>
    <string name="telefon">Telefon: </string>
    <string name="rabatt">Rabattcode: </string>
    <string name="weiter">Weiter</string>
    <string name="zahlungsmethode">Zahlungsmethode</string>
    <string name="bar">Bar bei Termin: </string>
    <string name="paypal">PayPal: </string>
    <string name="agb">AGB lesen</string>
    <string name="agb_bestaetigen">AGB bestätigen</string>
    <string name="termin_bestätigen">Termin bestätigen</string>
</resources>
