<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".C3_Herren">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:text="@string/herren"
        android:textColor="@color/herren"
        android:textSize="60dp" />

    <Button
        android:id="@+id/button12"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/friseur"
        android:textSize="22sp" />

    <Button
        android:id="@+id/button13"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/kosmetikstudios"
        android:textSize="22sp" />

    <Button
        android:id="@+id/button14"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/maniküre"
        android:textSize="22sp" />

    <Button
        android:id="@+id/button15"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/haarentfernung"
        android:textSize="22sp" />

</LinearLayout>