<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:text="@string/wellness"
        android:textColor="@color/wellness"
        android:textSize="60dp" />

    <Button
        android:id="@+id/button12"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/sauna"
        android:textSize="22sp" />

    <Button
        android:id="@+id/button13"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/massagen"
        android:textSize="22sp" />

</LinearLayout>