<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B7D8F1"
    tools:context=".B1_KundeSalon"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:text="@string/auswahl_kunde_salon"
        android:textSize="45sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/kunde"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/salonbetreiber"
        android:textSize="30sp" />

</LinearLayout>