<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".C6_Geschaefte">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top"
        android:layout_marginTop="10dp"
        android:text="@string/kategorie"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="number" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button19"
                    android:layout_width="150dp"
                    android:layout_height="55dp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="20dp"
                    android:text="@string/profil"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/button20"
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="50dp"
                    android:text="@string/details"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">

                <Button
                    android:id="@+id/button21"
                    android:layout_width="150dp"
                    android:layout_height="55dp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="20dp"
                    android:text="@string/profil"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/button22"
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="50dp"
                    android:text="@string/details"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">

                <Button
                    android:id="@+id/button23"
                    android:layout_width="150dp"
                    android:layout_height="55dp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="20dp"
                    android:text="@string/profil"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/button24"
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="50dp"
                    android:text="@string/details"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>